scenarios/cloudnative-pg/manifests/pgsql-cli.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tools

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: psql
  namespace: tools
spec:
  selector:
    matchLabels:
      app: psql
  serviceName: psql
  replicas: 1
  template:
    metadata:
      labels:
        app: psql
    spec:
      containers:
        - name: psql
          image: postgres:14.13-bullseye
          tty: true
          command: ['cat']
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          configMap:
            name: data
