scenarios/cloudnative-pg/manifests/minio.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: s3

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: minikube-pv-hack
  namespace: s3
spec:
  selector:
    matchLabels:
      name: minikube-pv-hack
  template:
    metadata:
      labels:
        name: minikube-pv-hack
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: minikube-pv-hack
          image: registry.access.redhat.com/ubi8:latest
          command:
            - bash
            - -c
            - |
              while : ; do
                chmod 777 /target/*
                sleep 1
              done
          volumeMounts:
            - name: host-vol
              mountPath: /target
      volumes:
        - name: host-vol
          hostPath:
            path: /tmp/hostpath-provisioner/s3

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cli
  namespace: s3
spec:
  ingressClassName: contour
  rules:
  - host: minio.s3.loc
    http:
      paths:
      - backend:
          service:
            name: minio-console
            port:
              name: http-console
        path: /
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3
  namespace: s3
spec:
  ingressClassName: contour
  rules:
  - host: s3.loc
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              name: http-minio
        path: /
        pathType: Prefix
